--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="" class="about-me__link">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://github.com/DavePhilipson" class="about-me__link">
+                    <a href="https://github.com/DavePhilipson" target="_blank" class="about-me__link">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="" class="about-me__link">
@@ -155,9 +155,91 @@
                 </div>
               </div>
             </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="Car subscription project">
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Car sales project
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    Html, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolorum blanditiis doloribus, dolores architecto optio?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://github.com/DavePhilipson" target="_blank" class="project__description--link" >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://github.com/DavePhilipson" target="_blank" class="project__description--link" >
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="Car subscription project">
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Car sales project
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    Html, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolorum blanditiis doloribus, dolores architecto optio?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://github.com/DavePhilipson" target="_blank" class="project__description--link" >
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://github.com/DavePhilipson" target="_blank" class="project__description--link" >
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
+      </div>
     </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img src="./assets/davidbr4gg.github.io-master/assets/logo.svg" class="footer__logo--img" alt="">
+          </figure>
+          <span class="footer__logo--popper">
+            Top
+            <i class="fas fa-arrow-up"></i>
+          </span>
+        </a>
+        <div class="footer__social--list">
+          <a href="" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white"
+          target="_blank"
+          >GitHub</a>
+          <a href="" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white"
+          target="_blank"
+          >LinkedIn</a>
+          <a href="" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white"
+          target="_blank"
+          >Email</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
